--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head style=>
   <link rel="stylesheet" href="external.css">
   <nav>
-    <a href="About Me.html"><img src="IMAGE/Logo Zul.png" height="auto" width="156" /></a>
+    <a href="about me.html"><img src="IMAGE/Logo Zul.png" height="auto" width="156" /></a>
     </nav>
 </head>
 <body background="IMAGE/Green neon.jpg">
