--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ main {
 <body>
 
   <ul>
-    <li><a href="Home.html">Home</a></li>
-    <li><a href="Biodata.html">Biodata</a></li>
-    <li><a href="Education.html">Education</a></li>
-    <li><a href="Experience.html">Experience</a></li>
-    <li><a href="Skill.html">Skill</a></li>
-    <li><a href="Extracurricular.html">Extracurricular</a></li>
-    <li><a href="About Me.html">About Me</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="biodata.html">Biodata</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="experience.html">Experience</a></li>
+    <li><a href="skill.html">Skill</a></li>
+    <li><a href="extracurricular.html">Extracurricular</a></li>
+    <li><a href="about me.html">About Me</a></li>
   </ul>
 
   <main>
