--- a/skill.html
+++ b/skill.html
@@ -63,33 +63,40 @@ li a:hover {
               &#9827; Writing : <meter max="100" value="100">100%</meter>
               &#9827; Reading : <meter max="100" value="100">100%</meter><br>
             </p>
+            <p>Advanced communication and writing skills in English with 4.5 MUET</p>
             <br>
             <p><b>&#9824; Malay</b><br>
               &#9827; Speaking : <meter max="100" value="100">100%</meter>
               &#9827; Writing : <meter max="100" value="95">95%</meter>
               &#9827; Reading : <meter max="100" value="100">100%</meter><br>
             </p>
+            <p>Perfectly fluent in Malay as it is my primary language and the lingua franca of Malaysia</p>
             <br>
             <p><b>&#9824; Mandarin</b><br>
               &#9827; Speaking : <meter max="100" value="50">50%</meter>
               &#9827; Writing : <meter max="100" value="20">20%</meter>
               &#9827; Reading : <meter max="100" value="50">50%</meter><br>
             </p>
+            <p>Have taken Mandarin classes and understands common phrases and communication</p>
             <br>
             <br>
             <hr>
             <h1><u><i>Skills</u></h1></i>
           <font-size="4px" face="palatino">
             &#9830; Microsoft Office : <meter max="100" value="90">90%</meter>
+            <p>★ Perfectly capable of utilizing Microsoft Office software for work purposes</p>
             <br>
             <br>
             &#9830; Videography and Photgraphy : <meter max="100" value="70">70%</meter>
+            <p>★ Capable of using more advanced techniques in videography to create creative content</p>
             <br>
             <br>
             &#9830; Video Editing : <meter max="100" value="80">80%</meter>
+            <p>★ Capable of using advanced editing techniques in software such as Wondershare Filmora to create interesting and viral videos</p>
             <br>
             <br>
             &#9830; Coding : <meter max="100" value="70">70%</meter><br>
+            <p>★ Have taken comprehensive coding classes and understands the intricate usage of HTML and Javascript to create compelling websites and web content</p>
             <br>
             <hr>
             <h1><u><i>Leadership Skills</u></i></h1>
